--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.13.1",
     "react-hook-form": "^6.15.3",
     "react-native": "0.63.4",
+    "react-native-linear-gradient": "^2.5.6",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
