--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hook-form": "^6.15.3",
     "react-native": "0.63.4",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-vector-icons": "^8.0.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
@@ -29,6 +30,7 @@
     "@babel/runtime": "^7.8.4",
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
+    "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^16.9.2",
     "@types/seamless-immutable": "^7.1.15",
