--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@hookform/resolvers": "^1.3.4",
+    "@hookform/resolvers": "2.0.0-beta.3",
     "axios": "^0.21.1",
     "react": "16.13.1",
     "react-hook-form": "^6.15.3",
     "react-native": "0.63.4",
+    "react-native-device-info": "^8.0.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-vector-icons": "^8.0.0",
     "react-redux": "^7.2.2",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
+    "@testing-library/jest-native": "^3.4.3",
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
     "@types/react-native-vector-icons": "^6.4.6",
@@ -49,6 +51,7 @@
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "prettier": "^2.2.1",
+    "react-native-testing-library": "^6.0.0",
     "react-test-renderer": "16.13.1",
     "typescript": "^3.8.3"
   },
@@ -57,6 +60,12 @@
   },
   "jest": {
     "preset": "react-native",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ],
+    "setupFiles": [
+      "./src/setupTests.ts"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
